--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,9 +1,10 @@
 h1 {
   color: black;
-  font-family: "playfair display", serif;
+  font-family: "Playfair Display", serif;
   font-weight: bold;
 }
+
 p {
-  font-family: "poppins", sans-serif;
+  font-family: "Poppins", sans-serif;
   font-weight: normal;
 }
