--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -17,10 +17,15 @@ h6 {
 h1 {
   font-size: 96px;
 }
+h2 {
+  font-size: 64px;
+}
 
 p {
   font-family: var(--default-font-family);
   font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
 }
 .hero {
   background: var(--secondary-color);
@@ -38,10 +43,29 @@ p {
   font-size: 24px;
 }
 .btn-branding {
-  background: #6c63ff;
+  background: var(--branding-color);
   border-radius: 4px;
   color: white;
   font-size: 18px;
   line-height: 27 px;
   padding: 15px 30px;
+}
+.btn-branding-outline {
+  background: var(--branding-color);
+  color: white;
+  border: 1px solid var(--branding-color);
+  border-radius: 4px;
+  font-size: 18px;
+  line-height: 27px;
+  padding: 15px 30px;
+}
+
+@media (max-width: 960px) {
+  .project description {
+    padding: 0;
+    text-align: center;
+  }
+}
+.project-description {
+  padding: 120 60px;
 }
